--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Шапка сайта-->
     <header>
         <nav>
-        <a href="/">WebStudio</a>
+        <a lang="en"href="/">WebStudio></a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
@@ -47,5 +48,48 @@
             </li>
         </ul>
     </section>
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li>
+                <img src="./img/box1.jpg" alt="Печать" width="370">
+            </li>
+            <li>
+                <img src="./img/box2.jpg" alt="Смартфон" width="370">
+            </li>
+            <li>
+                <img src="./img/box3.jpg" alt="Стилус" width="370">
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <img src="./img/teamcard1.jpg" alt="Дизайнер" width="270">
+            </li>
+            <li>
+                <img src="./img/teamcard2.jpg" alt="Разработчик" width="270">
+            </li>
+            <li>
+                <img src="./img/teamcard3.jpg" alt="Маркетолог" width="270">
+            </li>
+            <li>
+                <img src="./img/teamcard4.jpg" alt="Дизайнер интерфейсов" width="270">
+            </li>
+        </ul>
+    </section>
+    <!--Футер-->
+    <footer>
+        <a lang="en" href="/">WebStudio</a>
+        <address>
+            <ul>
+                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@example.com">info@example.com</a> </li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </address>
+
+    </footer>
 </body>
 </html>
