--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Шапка сайта-->
     <header>
         <nav>
-        <a lang="en"href="/">WebStudio></a>
+        <a lang="en" href="./index.html">WebStudio</a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
@@ -23,9 +23,13 @@
         </ul>
         
     </header>
+    <!--Уникальный контент страницы-->
+<main>
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <form> 
+            <input type="button" value="Заказать услугу">
+         </form>
     </section>
     <section>
         <h2>Особенности</h2>
@@ -52,13 +56,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <img src="./img/box1.jpg" alt="Печать" width="370">
+                <img src="./images/box1.jpg" alt="Печать" width="370">
             </li>
             <li>
-                <img src="./img/box2.jpg" alt="Смартфон" width="370">
+                <img src="./images/box2.jpg" alt="Смартфон" width="370">
             </li>
             <li>
-                <img src="./img/box3.jpg" alt="Стилус" width="370">
+                <img src="./images/box3.jpg" alt="Стилус" width="370">
             </li>
         </ul>
     </section>
@@ -66,25 +70,26 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./img/teamcard1.jpg" alt="Дизайнер" width="270">
+                <img src="./images/teamcard1.jpg" alt="Дизайнер" width="270">
             </li>
             <li>
-                <img src="./img/teamcard2.jpg" alt="Разработчик" width="270">
+                <img src="./images/teamcard2.jpg" alt="Разработчик" width="270">
             </li>
             <li>
-                <img src="./img/teamcard3.jpg" alt="Маркетолог" width="270">
+                <img src="./images/teamcard3.jpg" alt="Маркетолог" width="270">
             </li>
             <li>
-                <img src="./img/teamcard4.jpg" alt="Дизайнер интерфейсов" width="270">
+                <img src="./images/teamcard4.jpg" alt="Дизайнер интерфейсов" width="270">
             </li>
         </ul>
     </section>
-    <!--Футер-->
+</main>
+    <!--Подвал страницы-->
     <footer>
-        <a lang="en" href="/">WebStudio</a>
+        <a lang="en" href="./index.html">WebStudio</a>
         <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a> </li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
