--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 <main>
     <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <form> 
-            <input type="button" value="Заказать услугу">
-         </form>
+        <button type="submit">Заказать услугу</button>
     </section>
     <section>
         <h2>Особенности</h2>
@@ -71,15 +69,23 @@
         <ul>
             <li>
                 <img src="./images/teamcard1.jpg" alt="Дизайнер" width="270">
+                <h3>Игорь Демьяненко</h3>
+                <p lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="./images/teamcard2.jpg" alt="Разработчик" width="270">
+                <h3>Ольга Репина</h3>
+                <p lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/teamcard3.jpg" alt="Маркетолог" width="270">
+                <h3>Николай Тарасов</h3>
+                <p lang="en">Marketing</p>                
             </li>
             <li>
                 <img src="./images/teamcard4.jpg" alt="Дизайнер интерфейсов" width="270">
+                <h3>Михаил Ермаков</h3>
+                <p lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
